topic modeling finally works

--- a/notebooks/reddit_api.ipynb
+++ b/notebooks/reddit_api.ipynb
@@ -413,10 +413,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "depression = pd.DataFrame(json_list)\n",
+    "depression['date'] = depression['created_utc'].apply(lambda x: datetime.fromtimestamp(x))\n",
+    "depression.groupby('id').size().value_counts()\n",
+    "depression.to_csv('depression_rand_large2.csv')\n"
+   ]
   },
   {
    "cell_type": "code",
@@ -457,7 +462,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mh_df.to_csv('mh_rand_large2.csv')"
+    "# mh_df.to_csv('mh_rand_large2.csv')"
    ]
   },
   {
@@ -466,7 +471,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "mh_df.groupby('id').size().value_counts()"
+    "# mh_df.groupby('id').size().value_counts()"
    ]
   },
   {
