added tensorboard files

--- a/notebooks/topic_modeling.ipynb
+++ b/notebooks/topic_modeling.ipynb
@@ -1441,30 +1441,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([Timestamp('2020-06-06 22:27:31'), 'gy52ia', 'gafsr',\n",
+       "array([Timestamp('2020-05-23 04:21:51'), 'gp1zjv', 'BenderWasTaken',\n",
        "       'mentalhealth',\n",
-       "       \"I am unsure of what could be a panic attack and what isn't\",\n",
-       "       1591500451,\n",
-       "       \"What can be considered a panic attack? I am unsure of what could be a panic attack and what isn't\",\n",
-       "       0.017837555271690456, 0.0, 0.0, 0.0, 0.0021494620193750163, 0.0,\n",
-       "       0.0, 0.0, 0.03088615212162872, 0.11898850458039598, 0.0, 'panic'],\n",
-       "      dtype=object)"
+       "       'Someone on r/findareddit told me to ask my question here. . . Okay I\\'ll start off with giving a little backstory. My parents divorced about 3 years ago ever since my brother has gotten aggressive and he ignores many things my mom says. For instance \"could you put those schoolbook in your room instead of in the dining table\" and often het completely ignores that. He currently lives with my mom, my little sister and me (little brother) my sister and I eat at my dad\\'s place which is nearby every Thursday. And we sleep at my dad every other weekend. My brother does not want to visit my dad at his house because he doesn\\'t want to see, meet or be in the same house as his stepmother. She was the person my dad had an affair with. He does still talk to my dad in person weekly. Okay that\\'s everything about the divorce. My brother also wants everything to be the same. So if I get 6 strawberries he also wants six. If I chose the previous holiday location he can choose now. He has had this since he was born. Another thing I have to say is that it\\'s often me, my sister and mom against my brother. Hardly anyone ever agrees with him. And that might make him feel bad. Like I said before he\\'s really aggressive and he punches me weekly. He broke 2 doors and an iPad and somethings that had quite some meaning to my. He also punches my mom. A week ago she almost got pushed down the stairs. Last thing before I cut to the chase my brother steals and hides stuff when he\\'s mad. Examples: playstation 4 controller, my phone, my laptop, my school books, my id, my mom\\'s phone which causes me, my sister and my brother to be grounded until she found it (3 days) and the worst one has to be that he hid our passports just before going on holidays my mom looked everywhere in the house and never found it. Next day on the airport we were lucky enough to get on the plane without a passport. 2 weeks ago the passport were in a obvious place where my mom definitely looked. Even though he never said he did it we are all quite sure he did. (I hope that information might help) Okay so 6 weeks ago my brother stopped talking to everyone he lives with. He does still talk to my dad, his girlfriend, and the neighbors. It started when my sister and I wanted to play videos games my brother already played 3 hours that day so it was the obvious thing to let me and my sister play. But he didn\\'t give me the controller then my mom said he had to give it. Then he ran upstairs into his room with the controller. Out of frustration I run after him but he\\'s way strong so I grab a stick and hit hime with it. Because he does stuff like that often and sometimes I just snap. My mom had enough of it and grabbed the playstation and hid it for a week that made me and my sister even more angry at my brother. My mother also told my brother he wasn\\'t getting any presents if he didn\\'t give the controller back. The next day it was his birthday we all waited the whole day downstairs everything was decorated and we had some fun games to play. But he never came. Then his girlfriend knocked on the door and came in and we walked upstairs with here to give him the present and then leave the room. He never even said thank you. So my question to you guys is what do I or what can my mom do. Does anyone know why he acts like this?? A while back he said he wanted to go to a psychologist but only if me my sister and mom came with him. But the last time we asked he didn\\'t wanna come and we can\\'t force him. I just don\\'t know what to do. Any help is welcome Note: he is male 16',\n",
+       "       1590225711,\n",
+       "       'My brother hasn\\'t talked in 6 weeks Someone on r/findareddit told me to ask my question here. . . Okay I\\'ll start off with giving a little backstory. My parents divorced about 3 years ago ever since my brother has gotten aggressive and he ignores many things my mom says. For instance \"could you put those schoolbook in your room instead of in the dining table\" and often het completely ignores that. He currently lives with my mom, my little sister and me (little brother) my sister and I eat at my dad\\'s place which is nearby every Thursday. And we sleep at my dad every other weekend. My brother does not want to visit my dad at his house because he doesn\\'t want to see, meet or be in the same house as his stepmother. She was the person my dad had an affair with. He does still talk to my dad in person weekly. Okay that\\'s everything about the divorce. My brother also wants everything to be the same. So if I get 6 strawberries he also wants six. If I chose the previous holiday location he can choose now. He has had this since he was born. Another thing I have to say is that it\\'s often me, my sister and mom against my brother. Hardly anyone ever agrees with him. And that might make him feel bad. Like I said before he\\'s really aggressive and he punches me weekly. He broke 2 doors and an iPad and somethings that had quite some meaning to my. He also punches my mom. A week ago she almost got pushed down the stairs. Last thing before I cut to the chase my brother steals and hides stuff when he\\'s mad. Examples: playstation 4 controller, my phone, my laptop, my school books, my id, my mom\\'s phone which causes me, my sister and my brother to be grounded until she found it (3 days) and the worst one has to be that he hid our passports just before going on holidays my mom looked everywhere in the house and never found it. Next day on the airport we were lucky enough to get on the plane without a passport. 2 weeks ago the passport were in a obvious place where my mom definitely looked. Even though he never said he did it we are all quite sure he did. (I hope that information might help) Okay so 6 weeks ago my brother stopped talking to everyone he lives with. He does still talk to my dad, his girlfriend, and the neighbors. It started when my sister and I wanted to play videos games my brother already played 3 hours that day so it was the obvious thing to let me and my sister play. But he didn\\'t give me the controller then my mom said he had to give it. Then he ran upstairs into his room with the controller. Out of frustration I run after him but he\\'s way strong so I grab a stick and hit hime with it. Because he does stuff like that often and sometimes I just snap. My mom had enough of it and grabbed the playstation and hid it for a week that made me and my sister even more angry at my brother. My mother also told my brother he wasn\\'t getting any presents if he didn\\'t give the controller back. The next day it was his birthday we all waited the whole day downstairs everything was decorated and we had some fun games to play. But he never came. Then his girlfriend knocked on the door and came in and we walked upstairs with here to give him the present and then leave the room. He never even said thank you. So my question to you guys is what do I or what can my mom do. Does anyone know why he acts like this?? A while back he said he wanted to go to a psychologist but only if me my sister and mom came with him. But the last time we asked he didn\\'t wanna come and we can\\'t force him. I just don\\'t know what to do. Any help is welcome Note: he is male 16',\n",
+       "       0.0, 0.0, 0.0, 0.0, 0.0027860851089795023, 0.06480951897112165,\n",
+       "       0.0, 0.004030806180978551, 0.0, 0.0, 0.0027530473104801184,\n",
+       "       'family', 5, 4, 23, 2020], dtype=object)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "testing = topic_doc_df.sort_values(by=['panic'], ascending=False)\n",
-    "testing.values[3]"
+    "testing = topic_doc_df.sort_values(by=['family'], ascending=False)\n",
+    "testing.values[10]"
    ]
   },
   {
@@ -2104,13 +2104,6 @@
     "#           pmi_threshold_coefficient=5,\n",
     "#           metadata=None)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
