adding twitter glove to tensorboard

--- a/notebooks/eda_with_topics.ipynb
+++ b/notebooks/eda_with_topics.ipynb
@@ -1022,14 +1022,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# from gensim.models import KeyedVectors\n",
+    "# import gensim.downloader as api\n",
     "\n",
     "# # Load gensim word2vec\n",
     "# # w2v_path = '<Gensim File Path>'\n",
+    "# # w2v = api.load(\"glove-twitter-25\")\n",
     "# w2v = gensim.models.Word2Vec(tokenized_docs, size=400, window=5, min_count=5, sg=1)\n",
     "\n",
     "# import io\n",
