--- a/notebooks/eda_with_topics.ipynb
+++ b/notebooks/eda_with_topics.ipynb
@@ -1046,40 +1046,40 @@
     "# from gensim.models import KeyedVectors\n",
     "# import gensim.downloader as api\n",
     "\n",
-    "# Load gensim word2vec\n",
-    "# w2v_path = '<Gensim File Path>'\n",
-    "w2v = api.load(\"glove-wiki-gigaword-50\")\n",
+    "# # Load gensim word2vec\n",
+    "# # w2v_path = '<Gensim File Path>'\n",
+    "# # w2v = api.load(\"glove-twitter-25\")\n",
     "# w2v = gensim.models.Word2Vec(tokenized_docs, size=400, window=5, min_count=5, sg=1)\n",
     "\n",
-    "import io\n",
+    "# import io\n",
     "\n",
-    "# Vector file, `\\t` seperated the vectors and `\\n` seperate the words\n",
-    "\"\"\"\n",
-    "0.1\\t0.2\\t0.5\\t0.9\n",
-    "0.2\\t0.1\\t5.0\\t0.2\n",
-    "0.4\\t0.1\\t7.0\\t0.8\n",
-    "\"\"\"\n",
+    "# # Vector file, `\\t` seperated the vectors and `\\n` seperate the words\n",
+    "# \"\"\"\n",
+    "# 0.1\\t0.2\\t0.5\\t0.9\n",
+    "# 0.2\\t0.1\\t5.0\\t0.2\n",
+    "# 0.4\\t0.1\\t7.0\\t0.8\n",
+    "# \"\"\"\n",
     "\n",
-    "path2 = '/Users/collinswestnedge/programming/Metis_Online/project_04/tensorboard_files/'\n",
+    "# path2 = '/Users/collinswestnedge/programming/Metis_Online/project_04/tensorboard_files/'\n",
     "\n",
-    "out_v = io.open(path2+'wiki_vecs.tsv', 'w', encoding='utf-8')\n",
+    "# out_v = io.open(path2+'vecs.tsv', 'w', encoding='utf-8')\n",
     "\n",
-    "# Meta data file, `\\n` seperated word\n",
-    "\"\"\"\n",
-    "token1\n",
-    "token2\n",
-    "token3\n",
-    "\"\"\"\n",
-    "out_m = io.open(path2+'wiki_meta.tsv', 'w', encoding='utf-8')\n",
+    "# # Meta data file, `\\n` seperated word\n",
+    "# \"\"\"\n",
+    "# token1\n",
+    "# token2\n",
+    "# token3\n",
+    "# \"\"\"\n",
+    "# out_m = io.open(path2+'meta.tsv', 'w', encoding='utf-8')\n",
     "\n",
-    "# Write meta file and vector file\n",
-    "for index in range(len(w2v.wv.index2word)):\n",
-    "    word = w2v.wv.index2word[index]\n",
-    "    vec = w2v.wv.vectors[index]\n",
-    "    out_m.write(word + \"\\n\")\n",
-    "    out_v.write('\\t'.join([str(x) for x in vec]) + \"\\n\")\n",
-    "out_v.close()\n",
-    "out_m.close()"
+    "# # Write meta file and vector file\n",
+    "# for index in range(len(w2v.wv.index2word)):\n",
+    "#     word = w2v.wv.index2word[index]\n",
+    "#     vec = w2v.wv.vectors[index]\n",
+    "#     out_m.write(word + \"\\n\")\n",
+    "#     out_v.write('\\t'.join([str(x) for x in vec]) + \"\\n\")\n",
+    "# out_v.close()\n",
+    "# out_m.close()"
    ]
   },
   {
